add code hightlight.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>Bootstrap 101 Template</title>
+    <title>Web Drawing Demo</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- https://highlightjs.org/ -->
+    <link rel="stylesheet" href="css/default.min.css">
+    <link href="css/zengjf_css.css" rel="stylesheet">
+    <link rel="Shortcut Icon" href="img/favicon.ico">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -190,6 +194,8 @@
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <!-- https://highlightjs.org/ -->
+    <script src="js/highlight.min.js"></script>
     <script src="js/zengjf_codeframe.js"></script>
   </body>
 </html>
