add code hightlight.

--- a/index.html
+++ b/index.html
@@ -197,5 +197,6 @@
     <!-- https://highlightjs.org/ -->
     <script src="js/highlight.min.js"></script>
     <script src="js/zengjf_codeframe.js"></script>
+    <script src="js/zengjf_svg.js"></script>
   </body>
 </html>
