--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- https://highlightjs.org/ -->
     <link rel="stylesheet" href="css/default.min.css">
-    <link href="css/zengjf_css.css" rel="stylesheet">
+    <link href="css/zengjf/zengjf_css.css" rel="stylesheet">
     <link rel="Shortcut Icon" href="img/favicon.ico">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -27,154 +27,71 @@
         <div class="col-md-12 column">
           <nav class="navbar navbar-default" role="navigation">
             <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="javascript:void(0);" onclick="read_home();">zengjf (ZengjfOS)</a>
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="javascript:void(0);" onclick="show_home_page();">zengjf (ZengjfOS)</a>
             </div>
             
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <!--
-                <li class="active">
-                   <a href="#">SVG</a>
-                </li>
-                <li>
-                   <a href="#">Canvas</a>
-                </li>
-                -->
-
-                <!-- SVG -->
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">SVG<strong class="caret"></strong></a>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a href="javascript:void(0);" onclick="readHTML()">Action</a>
-                    </li>
-                    <li>
-                      <a href="#">Another action</a>
-                    </li>
-                    <li>
-                      <a href="#">Something else here</a>
-                    </li>
-                    <li class="divider">
-                    </li>
-                    <li>
-                      <a href="#">Separated link</a>
-                    </li>
-                    <li class="divider">
-                    </li>
-                    <li>
-                      <a href="#">One more separated link</a>
-                    </li>
-                  </ul>
-                </li>
-
-                <!-- Canvas -->
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Canvas<strong class="caret"></strong></a>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a href="#">Action</a>
-                    </li>
-                    <li>
-                      <a href="#">Another action</a>
-                    </li>
-                    <li>
-                      <a href="#">Something else here</a>
-                    </li>
-                    <li class="divider">
-                    </li>
-                    <li>
-                      <a href="#">Separated link</a>
-                    </li>
-                    <li class="divider">
-                    </li>
-                    <li>
-                      <a href="#">One more separated link</a>
-                    </li>
-                  </ul>
-                </li>
-
-                <!-- three.js -->
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Three.js<strong class="caret"></strong></a>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a href="#">Action</a>
-                    </li>
-                    <li>
-                      <a href="#">Another action</a>
-                    </li>
-                    <li>
-                      <a href="#">Something else here</a>
-                    </li>
-                    <li class="divider">
-                    </li>
-                    <li>
-                      <a href="#">Separated link</a>
-                    </li>
-                    <li class="divider">
-                    </li>
-                    <li>
-                      <a href="#">One more separated link</a>
-                    </li>
-                  </ul>
-                </li>
-
-                <!-- demo for play -->
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Show Time<strong class="caret"></strong></a>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a href="#">Action</a>
-                    </li>
-                    <li>
-                      <a href="#">Another action</a>
-                    </li>
-                    <li>
-                      <a href="#">Something else here</a>
-                    </li>
-                    <li class="divider">
-                    </li>
-                    <li>
-                      <a href="#">Separated link</a>
-                    </li>
-                    <li class="divider">
-                    </li>
-                    <li>
-                      <a href="#">One more separated link</a>
-                    </li>
-                  </ul>
-                </li>
-
-                <!-- all demo for my girl -->
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Girl<strong class="caret"></strong></a>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a href="#">Action</a>
-                    </li>
-                    <li>
-                      <a href="#">Another action</a>
-                    </li>
-                    <li>
-                      <a href="#">Something else here</a>
-                    </li>
-                    <li class="divider">
-                    </li>
-                    <li>
-                      <a href="#">Separated link</a>
-                    </li>
-                    <li class="divider">
-                    </li>
-                    <li>
-                      <a href="#">One more separated link</a>
-                    </li>
-                  </ul>
-                </li>
               </ul>
             </div>
           </nav>
 
           <div id="show-content">
+            <div class="jumbotron">
+              <h1>
+                Web Drawing Demo
+              </h1>
+              <br />
+              <br />
+              <br />
+              <p>
+                记录学习SVG、Canvas、Three.js过程中的源代码，以及遇到的一些源代码问题，便于自己查看，内容还是偏向于源代码记录的形式呈现。
+              </p>
+              <p>
+                针对于学习过程中遇到的那么磕磕碰碰的问题，主要还是记录在博客中：<a class="btn btn-large btn-primary" href="http://www.cnblogs.com/zengjfgit/">zengjf »</a>。
+              </p>
+              <!--
+              <p>
+                 <a class="btn btn-primary btn-large" href="#">Learn more</a>
+              </p>
+              -->
+            </div>
+            
+            <div class="row clearfix">
+              <div class="col-md-4 column">
+                <h2>
+                  SVG 
+                </h2>
+                <p>
+                  可缩放矢量图形（英语：Scalable Vector Graphics，SVG）是一种基于可扩展标记语言（XML），用于描述二维矢量图形的图形格式。SVG由W3C制定，是一个开放标准。
+                </p>
+                <p>
+                   <a class="btn" href="https://zh.wikipedia.org/wiki/%E5%8F%AF%E7%B8%AE%E6%94%BE%E5%90%91%E9%87%8F%E5%9C%96%E5%BD%A2">View details »</a>
+                </p>
+              </div>
+              <div class="col-md-4 column">
+                <h2>
+                  Canvas 
+                </h2>
+                <p>
+                  Canvas 是 HTML5 新增的元素，可用于通过使用JavaScript中的脚本来绘制图形。例如，它可以用于绘制图形，制作照片，创建动画，甚至可以进行实时视频处理或渲染。
+                </p>
+                <p>
+                   <a class="btn" href="https://zh.wikipedia.org/wiki/Canvas_(HTML%E5%85%83%E7%B4%A0)">View details »</a>
+                </p>
+              </div>
+              <div class="col-md-4 column">
+                <h2>
+                  Three.js 
+                </h2>
+                <p>
+                  什么是threejs，很简单，你将它理解成three + js就可以了。three表示3D的意思，js表示javascript的意思。那么合起来，three.js就是使用javascript 来写3D程序的意思。
+                </p>
+                <p>
+                   <a class="btn" href="https://threejs.org/">View details »</a>
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -193,8 +110,12 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- https://highlightjs.org/ -->
     <script src="js/highlight.min.js"></script>
-    <script src="js/zengjf_config.js"></script>
-    <script src="js/zengjf_codeframe.js"></script>
-    <script src="js/zengjf_svg.js"></script>
+    <!-- http://handlebarsjs.com/ -->
+    <script src="js/handlebars-v4.0.10.js"></script>
+    <!-- zengjf lib -->
+    <script src="js/zengjf/zengjf_config.js"></script>
+    <script src="js/zengjf/zengjf_codeframe.js"></script>
+    <script src="js/zengjf/zengjf_svg.js"></script>
+    <script src="js/zengjf/zengjf.js"></script>
   </body>
 </html>
