finish navigation part.

--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <h1>
-    Web Drawing Demo
+      {{title}}
   </h1>
   <br />
   <br />
@@ -9,7 +9,7 @@
     记录学习SVG、Canvas、Three.js过程中的源代码，以及遇到的一些源代码问题，便于自己查看，内容还是偏向于源代码记录的形式呈现。
   </p>
   <p>
-    针对于学习过程中遇到的那么磕磕碰碰的问题，主要还是记录在博客中：<a class="btn btn-large btn-primary" href="http://www.cnblogs.com/zengjfgit/">zengjf »</a>。
+    针对于学习过程中遇到的那么磕磕碰碰的问题，主要还是记录在博客中：<a class="btn btn-large btn-primary" href="http://www.cnblogs.com/zengjfgit/">zengjf »</a>
   </p>
   <!--
   <p>
