--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <footer>
       <hr/>
       <div align="center" role="contentinfo">
-        <a href="https://github.com/">GitHub</a> 账号下 <a href="https://github.com/ZengjfOS/">ZengjfOS</a> 所有仓库内容最终解释权归 <a href="http://www.cnblogs.com/zengjfgit/">zengjf</a> 所有。
+        <a href="https://github.com/">GitHub</a> 下 <a href="https://github.com/ZengjfOS/">ZengjfOS</a> 账号所有仓库内容最终解释权归 <a href="http://www.cnblogs.com/zengjfgit/">zengjf</a> 所有。
       </div>
     </footer>
 
