--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
     <script src="js/highlight.min.js"></script>
     <!-- http://handlebarsjs.com/ -->
     <script src="js/handlebars-v4.0.10.js"></script>
+    <!-- https://github.com/chjj/marked -->
+    <script src="js/marked.js"></script>
     <!-- zengjf lib -->
     <script src="js/zengjf/zengjf_config.js"></script>
     <script src="js/zengjf/zengjf_codeframe.js"></script>
