add warning content when first load.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
           </nav>
 
           <div id="show-content">
+            <div class="jumbotron text-center">
+              <h1>
+                Waiting For Loading ...
+              </h1>
+            </div>
           </div>
 
         </div>
