--- a/src/svg/SVG_001_javascript_control_svg_elemet/html/index.html
+++ b/src/svg/SVG_001_javascript_control_svg_elemet/html/index.html
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="220">
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="220" width="220">
   <path id="test1" style="fill:#fe0; stroke:#fff; stroke-width:5;" />
   <path id="test2" style="fill:#0a0; stroke:#fff; stroke-width:5;" />
   <path id="test3" style="fill:#e00; stroke:#fff; stroke-width:5;" />
