finish show_time.

--- a/index.html
+++ b/index.html
@@ -67,8 +67,6 @@
     <script src="js/marked.js"></script>
     <!-- zengjf lib -->
     <script src="js/zengjf/zengjf_config.js"></script>
-    <script src="js/zengjf/zengjf_codeframe.js"></script>
-    <script src="js/zengjf/zengjf_svg.js"></script>
-    <script src="js/zengjf/zengjf.js"></script>
+    <script src="js/zengjf/zengjf_frame.js"></script>
   </body>
 </html>
