add description in home page.

--- a/home_page.html
+++ b/home_page.html
@@ -6,16 +6,17 @@
   <br />
   <br />
   <p>
-    记录学习SVG、Canvas、Three.js过程中的源代码，以及遇到的一些源代码问题，便于自己查看，内容还是偏向于源代码记录的形式呈现。
+    使用<code>Bootstrap</code>作为整体样式，主要是自己不太会调整UI界面，省点事；
   </p>
   <p>
-    针对于学习过程中遇到的那么磕磕碰碰的问题，主要还是记录在博客中：<a class="btn btn-large btn-primary" href="http://www.cnblogs.com/zengjfgit/">zengjf »</a>
+    采用了<code>JavaScript</code>模板库<code>Handlebars</code>对模板进行解析，自动解析在<code>js/zengjf/zengjf_config.js</code>中的配置，包括动态生成导航栏；
   </p>
-  <!--
   <p>
-     <a class="btn btn-primary btn-large" href="#">Learn more</a>
+    采用<code>JavaScript marked Markdown</code>解析库，这样就可以直接解析在<code>GitHub</code>上编写的<code>Markdown</code>文档，解决了喜欢使用<code>Markdown</code>写<code>Blog</code>的问题；
   </p>
-  -->
+  <p>
+    针对于学习过程中遇到的磕磕碰碰，主要还是记录在博客中，因为那里可以直接<code>Google</code>检索：<a class="btn btn-large btn-primary" href="http://www.cnblogs.com/zengjfgit/">zengjf »</a>
+  </p>
 </div>
 
 <div class="row clearfix">
