add highlight line nubmer javacript lib.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- https://highlightjs.org/ -->
     <script src="js/highlight.min.js"></script>
+    <script src="js/highlightjs-line-numbers.min.js"></script>
     <!-- http://handlebarsjs.com/ -->
     <script src="js/handlebars-v4.0.10.js"></script>
     <!-- https://github.com/chjj/marked -->
