make code arch more simple.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- https://highlightjs.org/ -->
-    <link rel="stylesheet" href="css/default.min.css">
+    <!-- zengjf lib -->
     <link href="css/zengjf/zengjf_css.css" rel="stylesheet">
     <link rel="Shortcut Icon" href="img/favicon.ico">
 
@@ -59,9 +58,6 @@
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-    <!-- https://highlightjs.org/ -->
-    <script src="js/highlight.min.js"></script>
-    <script src="js/highlightjs-line-numbers.min.js"></script>
     <!-- http://handlebarsjs.com/ -->
     <script src="js/handlebars-v4.0.10.js"></script>
     <!-- https://github.com/chjj/marked -->
