--- a/src/SVG/001_javascript_control_svg_element/demo.html
+++ b/src/SVG/001_javascript_control_svg_element/demo.html
@@ -1,3 +1,7 @@
+<!-- https://highlightjs.org/ -->
+<link rel="stylesheet" href="css/default.min.css">
+
+<link href="css/zengjf/zengjf_css.css" rel="stylesheet"
 <div class="javascript_control_svg_elemet">
   <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="220" width="220">
     <path id="test1" style="fill:#fe0; stroke:#fff; stroke-width:5;" />
@@ -5,3 +9,8 @@
     <path id="test3" style="fill:#e00; stroke:#fff; stroke-width:5;" />
   </svg>
 <div>
+
+<!-- https://highlightjs.org/ -->
+<script src="js/highlight.min.js"></script>
+<script src="js/highlightjs-line-numbers.min.js"></script>
+
