--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
       </div>
     </footer>
 
+    <!-- http://requirejs.org/ -->
+    <script src="js/require.js" defer async="true" ></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -62,6 +64,8 @@
     <script src="js/handlebars-v4.0.10.js"></script>
     <!-- https://github.com/chjj/marked -->
     <script src="js/marked.js"></script>
+    <!-- http://underscorejs.org/ -->
+    <script src="js/underscore-min.js"></script>
     <!-- zengjf lib -->
     <script src="js/zengjf/zengjf_config.js"></script>
     <script src="js/zengjf/zengjf_frame.js"></script>
