--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="row clearfix">
         <div class="col-md-12 column">
-          <nav class="navbar navbar-default" role="navigation">
+          <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="margin-left:60px;margin-right: 60px;">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="javascript:void(0);" onclick="show_home_page();">zengjf (ZengjfOS)</a>
             </div>
@@ -35,7 +35,7 @@
             </div>
           </nav>
 
-          <div id="show-content">
+          <div id="show-content" style='margin-top: 60px;'>
             <div class="jumbotron text-center">
               <h1>
                 Waiting For Loading ...
