--- a/index.html
+++ b/index.html
@@ -24,14 +24,22 @@
     <div class="container">
       <div class="row clearfix">
         <div class="col-md-12 column">
-          <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="margin-left:60px;margin-right: 60px;">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="javascript:void(0);" onclick="show_home_page();">zengjf (ZengjfOS)</a>
-            </div>
-            
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav">
-              </ul>
+
+          <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="javascript:void(0);" onclick="show_home_page();">zengjf (ZengjfOS)</a>
+              </div>
+              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                </ul>
+              </div>
             </div>
           </nav>
 
@@ -67,3 +75,5 @@
     <script src="js/zengjf/zengjf_frame.js"></script>
   </body>
 </html>
+
+
