add mutiple language support lib.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@
                 <a class="navbar-brand" href="javascript:void(0);" onclick="show_home_page();">zengjf (ZengjfOS)</a>
               </div> 
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                </ul>
               </div>
             </div>
           </nav>
@@ -70,6 +68,8 @@
     <script src="js/marked.js"></script>
     <!-- http://underscorejs.org/ -->
     <script src="js/underscore-min.js"></script>
+    <!-- https://github.com/jquery-i18n-properties/jquery-i18n-properties -->
+    <script type="text/javascript" language="JavaScript" src="js/jquery.i18n.properties.min.js"></script>
     <!-- zengjf lib -->
     <script src="js/zengjf/zengjf_config.js"></script>
     <script src="js/zengjf/zengjf_frame.js"></script>
