add keep walk part.

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
           <div id="show-content" style='margin-top: 60px;'>
             <div class="jumbotron text-center">
-              <h1>
-                Waiting For Loading ...
-              </h1>
+              <h2>
+                Page could not be loaded. Please try refreshing.
+              </h2>
             </div>
           </div>
 
