--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button> 
-                <a class="navbar-brand" href="javascript:void(0);" onclick="show_home_page();">zengjf (ZengjfOS)</a>
+                <a class="navbar-brand" href="javascript:void(0);" onclick="show_home_page(this);">zengjf (ZengjfOS)</a>
               </div> 
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               </div>
